--- a/portfolio/css/fontello.css
+++ b/portfolio/css/fontello.css
@@ -55,12 +55,12 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-mail:before { content: '\e800'; } /* '' */
-.icon-user:before { content: '\e801'; } /* '' */
-.icon-laptop:before { content: '\e802'; } /* '' */
+.icon-mail:before { content: '\e800'; font-size: 70px; margin-top: 20px} /* '' */
+.icon-user:before { content: '\e801'; font-size: 73px; margin-top: 20px } /* '' */
+.icon-laptop:before { content: '\e802'; font-size: 70px; margin-top: 20px } /* '' */
 .icon-mail-alt:before { content: '\f0e0'; } /* '' */
-.icon-laptop-1:before { content: '\f109'; } /* '' */
-.icon-graduation-cap:before { content: '\f19d'; } /* '' */
+.icon-laptop-1:before { content: '\f109'; font-size: 73px; margin-top: 20px} /* '' */
+.icon-graduation-cap:before { content: '\f19d'; font-size: 70px; margin-top: 20px} /* '' */
 .icon-facebook-rect:before { content: '\f301'; font-size: 70px; margin-top: 35px} /* '' */
 .icon-twitter-bird:before { content: '\f303'; font-size: 70px; margin-top: 35px} /* '' */
 .icon-googleplus-rect:before { content: '\f309'; font-size: 70px; margin-top: 35px} /* '' */
