--- a/scroll-lists/style.css
+++ b/scroll-lists/style.css
@@ -9,11 +9,62 @@ body {
 #logo {
 	width: 100%;
 	height: 50px;
-	background-color: #38702d;
+	background-color: #476640;
 	font-size: 36px;
 	color: white;
 	text-align: center;
 	text-transform: uppercase;
 	padding: 5px 0px 5px 0px;
-	
+	letter-spacing: 3px;
+	border-bottom: 2px solid #33402a;
+	text-shadow: 
+		2px 2px 0 #33402a,
+		-2px 2px 0 #33402a,
+		-2px -2px 0 #33402a,
+		2px -2px 0 #33402a;
+}
+
+#container {
+	margin-left: auto;
+	margin-right: auto;
+	background-color: white;
+	width: 878px;
+	padding: 10px;
+	border-left: 1px solid #ccc;
+	border-right: 1px solid #ccc;
+}
+
+#contents {
+	width: 780px;
+	padding-left: 100px;
+
+}
+
+ol {
+	margin-top: 5px;
+
+
+}
+
+ol > li {
+	font-size: 22px;
+	text-transform: uppercase;
+	font-weight: 700;
+	padding: 5px;
+	letter-spacing: 3px;
+}
+
+ol > li > ul {
+	font-size: 18px;
+	text-transform: none;
+	font-weight: 400;
+	padding: 0px;
+	letter-spacing: 0px;
+	margin-top: 5px;
+	margin-left: 30px;
+}
+
+ol > li > ul > li {
+	margin: 0px;
+
 }
