--- a/scroll-lists/style.css
+++ b/scroll-lists/style.css
@@ -6,6 +6,26 @@ body {
 	font-size: 20px;
 }
 
+a:link {
+	color: black;
+	text-decoration: none;
+}
+
+a:visited {
+	color: black;
+	text-decoration: none;
+}
+
+a:hover {
+	color: #476640;
+	text-decoration:underline;
+}
+
+a:active {
+	color: black;
+	text-decoration: none;
+}
+
 #logo {
 	width: 100%;
 	height: 50px;
@@ -62,9 +82,25 @@ ol > li > ul {
 	letter-spacing: 0px;
 	margin-top: 5px;
 	margin-left: 30px;
+	
 }
 
 ol > li > ul > li {
 	margin: 0px;
+}
 
+ol > li > ul > li:before {
+	color: #476640;
+	margin-right: 5px;
+}
+
+.slajd {
+	padding: 20px 40px;
+	text-align: justify;
+}
+
+h1 {
+	font-size: 24px;
+	text-transform: uppercase;
+	font-weight: 700;
 }
