--- a/scroll-lists/style.css
+++ b/scroll-lists/style.css
@@ -104,3 +104,14 @@ h1 {
 	text-transform: uppercase;
 	font-weight: 700;
 }
+
+.scrollUp {
+	width: 64px;
+	height: 64px;
+	text-decoration: none;
+	background: url("img/up.png") no-repeat 0px 0px;
+	position: fixed;
+	right: 50px;
+	bottom: 50px;
+	display: none;
+}
