--- a/scroll-lists/style.css
+++ b/scroll-lists/style.css
@@ -115,3 +115,21 @@ h1 {
 	bottom: 50px;
 	display: none;
 }
+
+#footer {
+	width: 100%;
+	height: 30px;
+	background-color: #476640;
+	font-size: 22px;
+	color: white;
+	text-align: center;
+	text-transform: uppercase;
+	padding: 5px 0px 5px 0px;
+	letter-spacing: 3px;
+	border-top: 2px solid #33402a;
+	text-shadow: 
+		2px 2px 0 #33402a,
+		-2px 2px 0 #33402a,
+		-2px -2px 0 #33402a,
+		2px -2px 0 #33402a;
+}
