--- a/html-5-semantics/main.css
+++ b/html-5-semantics/main.css
@@ -52,4 +52,41 @@ nav {
 	color: #0a2b42;
 }
 
+.categories {
+	margin-left: auto;
+	margin-right: auto;
+	width: 950px;
+	text-align: center;
+	padding: 0;
+}
 
+h1 {
+	color: #39a5f1;
+	font-size:44px;
+	font-weight: 400;
+	margin-bottom: 20px;
+}
+
+.author {
+	display: inline-block;
+	margin-top: 10px;
+}
+
+.author a {
+	opacity: 0.9;
+
+}
+
+figure {
+	margin: 8px;
+	padding: 0;
+}
+
+figcaption {
+	margin-top: 8px;
+	padding: 0;
+}
+
+.author a:hover {
+	opacity: 1;
+}
