--- a/html-5-semantics/main.css
+++ b/html-5-semantics/main.css
@@ -18,7 +18,7 @@ h1.logo {
 	margin-bottom: 40px;
 }
 
-nav {
+#topnav {
 	background-color: #1c74b2;
 	text-align: center;
 }
@@ -162,65 +162,55 @@ h2 {
 	background-color: #196499;
 }
 
-.socials
-{
+.socials {
 	width:100%;
 	text-align: center;
 	background-color: #191d21;
 }
 
-.socialdivs
-{
+.socialdivs {
 	width: 1000px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
-.fb
-{
+.fb {
 	width: 250px;
 	height: 155px;
 	float:left;
 }
 
-.fb:hover
-{
+.fb:hover {
 	background-color: #4668b3;
 }
 
-.yt
-{
+.yt {
 	width: 250px;
 	height: 155px;
 	float:left;
 }
 
-.yt:hover
-{
+.yt:hover {
 	background-color: #d94348;
 }
 
-.tw
-{
+.tw {
 	width: 250px;
 	height: 155px;
 	float:left;
 }
 
-.tw:hover
-{
+.tw:hover {
 	background-color: #3095d3;
 }
 
-.gplus
-{
+.gplus {
 	width: 250px;
 	height: 155px;
 	float:left;
 }
 
-.gplus:hover
-{
+.gplus:hover {
 	background-color: #d95333;
 }
 
@@ -229,4 +219,38 @@ h2 {
 	margin-right: auto;
 	text-align: center;
 	padding: 20px;
+}
+
+.container {
+	margin-left: auto;
+	margin-right: auto;
+	width: 1000px;
+}
+
+.west {
+	float: left;
+	width: 750px;
+	padding: 20px;
+	text-align: justify;
+}
+
+.east {
+	float: left;
+	width: 170px;
+	padding: 20px;
+}
+
+.west h1 {
+	font-size: 32px;
+	color: #39a5f1;
+	font-weight: 400;
+	margin-bottom: 20px;
+}
+
+.east ul {
+	padding-left: 20px;
+}
+
+.east li {
+	margin-bottom: 5px;
 }
