--- a/html-5-semantics/main.css
+++ b/html-5-semantics/main.css
@@ -254,3 +254,11 @@ h2 {
 .east li {
 	margin-bottom: 5px;
 }
+
+.east img {
+	margin-top: 20px;
+}
+
+#commentsSection img {
+	margin-top: 30px;
+}
